# cpp-multiarch-starter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  main.cpp
cmake/: Doctest.cmake  Documentation.cmake  Environment.cmake  LTO.cmake  Misc.cmake  Sanitizers.cmake
cmake/toolchains/baremetal-arm/: arm-none-eabi-gcc.cmake
cmake/toolchains/linux/: gcc.cmake
tests/: CMakeLists.txt
